<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartSchool</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Usuário</string>
    <string name="password">Senha</string>
    <string name="getin">Entrar</string>
    <string name="esqueceu">Esqueceu a senha?</string>
    <string name="title_activity_menu">Menu</string>
    <string name="home">Página Inicial</string>
    <string name="frequencia">Frequência</string>
    <string name="diario">Diário</string>
    <string name="perfil">Perfil</string>
    <string name="config">Configuração</string>
    <string name="sair">Sair</string>
    <string name="title_activity_frequencia">Frequencia</string>
    <string name="title_activity_diario">Diario</string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="title_activity_configuracoes">Configuracoes</string>

</resources>
